# fastapi-task-manager

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
fastapi_task_manager/: __main__.py  app.py  database.py  settings.py  tables.py
fastapi_task_manager/api/: auth.py  labels.py  router.py  statuses.py  tasks.py
fastapi_task_manager/models/: auth.py  labels.py  statuses.py  tasks.py
fastapi_task_manager/services/: auth.py  labels.py  statuses.py  tasks.py
tests/: test_fastapi_task_manager.py
tests/api/: test_labels.py
